# Modelo-Predictivo-con-Simulaci-n

./: .gitignore  SAIDI_regionales.xlsx  abrego_promedios_mensuales_ponderados.xlsx  main.py  optimize_smoothing.py  pyproject.toml  requirements.txt  requiremets.txt
config/: optimized_models.json
controller/: app_controller.py
model/: climate_model.py  excel_model.py
services/: climate_simulation_service.py  export_service.py  improved_model_service.py  optimization_service.py  overfitting_detection_service.py  prediction_service.py  report_generation_service.py  rolling_validation_service.py  uncertainty_service.py  validation_service.py
view/: __init__.py  climate_simulation_dialog.py  main_window.py
