[project]
name = "prototipo"
version = "0.1.0"
description = "prototipo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "charset-normalizer==3.4.4",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "cython==3.1.3",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.12",
    "fonttools==4.59.2",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "mando==0.7.1",
    "matplotlib==3.10.6",
    "numpy==1.26.0",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.2",
    "patsy==1.0.1",
    "pefile==2023.2.7",
    "pillow==11.3.0",
    "pmdarima==2.0.4",
    "psutil==7.0.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pyparsing==3.0.9",
    "pyqt6>=6.10.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.2",
    "radon==6.0.1",
    "reportlab==4.4.4",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "statsmodels==0.14.5",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "xlrd==2.0.2",
]

